# fav-content

./: LICENSE  README.md  pyproject.toml
data/channels/MyFirstMillion/: transcript.txt
data/channels/MyFirstMillion/461/output/: summarized.txt  summarized2.txt  summary3.txt
data/channels/MyFirstMillion/461/transcripts/: transcript-with-timestamps.txt  transcript_1.txt  transcript_2.txt  transcript_3.txt  transcript_4.txt  transcript_5.txt  transcript_6.txt
data/interview-podcasts/channels/LexFridman/EpisodeX-JimmyWales/transcripts/: LexFridmanAndJimmyWales.txt
data/interview-podcasts/channels/MyFirstMillion/461/transcripts/: transcript_7.txt
data/youtube/channels/MyFirstMillion/461/transcripts/: transcript_0.txt
src/: test.py  test2.py  test3.py
src/utils/: gpt_splitter.py
